--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -134,12 +134,16 @@
   
         .slider {
             display: flex;
-            aspect-ratio: 16 / 9;
-            height: auto;
+            aspect-ratio: 16 / 11;
             overflow-x: auto;
-            overflow-y: hidden;
             scroll-snap-type: x mandatory;
-            scroll-behavior: smooth; /* Enables smooth scrolling */
+            scroll-behavior: smooth;
+            box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+            -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
+        }
+
+        .slider::-webkit-scrollbar {
+            display: none; /* Safari and Chrome */
         }
 
         .slider img {
@@ -276,8 +280,9 @@
             grid-row: 1 / 2;
             height: 25rem;
             display: flex;
-            justify-content: flex-start; 
+            justify-content: center; 
             align-items: flex-end; 
+            margin-left: 5rem;
           }
           
           .card {
