--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,35 +29,35 @@
 
             <li class="nav-item"> 
                 <a href="#" class="nav-link">
-                    <div class="icon"></div>
+                    <div class="nav-icon"></div>
                     <span class="link-text"> Login </span> 
                 </a>
             </li>
 
             <li class="nav-item"> 
                 <a href="#" class="nav-link">
-                    <div class="icon"><i class="fa-regular fa-sun"></i></div>
+                    <div class="nav-icon"><i class="fa-regular fa-sun"></i></div>
                 </a>
             </li>
             {% else %}
 
             <li class="nav-item"> 
                 <a href="#" class="nav-link">
-                    <div class="icon"><i class="fa-solid fa-user-ninja"></i></div>
+                    <div class="nav-icon"><i class="fa-solid fa-user-ninja"></i></div>
                     <span class="link-text"> Register </span> 
                 </a>
             </li>
 
             <li class="nav-item"> 
                 <a href="#" class="nav-link">
-                    <div class="icon"><i class="fa-brands fa-napster"></i></div>
+                    <div class="nav-icon"><i class="fa-brands fa-napster"></i></div>
                     <span id="link-text-padding" class="link-text"> Login </span> 
                 </a>
             </li>
 
             <li class="nav-item"> 
                 <a href="#" class="nav-link">
-                    <div class="icon"><i class="fa-regular fa-sun"></i></div>
+                    <div class="nav-icon"><i class="fa-regular fa-sun"></i></div>
                 </a>
             </li>
             {% endif %}
