--- a/templates/index.html
+++ b/templates/index.html
@@ -4,93 +4,78 @@
 
 {% block head %}
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-{% endblock %} 
+{% endblock %}
+
 {% block main %}
+    <!-- Carrousel on main -->
+    <div class="carrousel">
+        <div class="slider-wrap">
+            <div class="slider">
+                <img id="slide1" src="{{ url_for('static', filename='images/spotify_lyrics.jpg') }}" alt="Lyrics Spotify">
+                <img id="slide2" src="{{ url_for('static', filename='images/spotify_list.jpg') }}" alt="Playlist Spotify">
+                <img id="slide3" src="{{ url_for('static', filename='images/spotify_liked.jpg') }}" alt="Like playlist Spotify">
+            </div>
+            <div class="slider-nav">
+                <!-- Anchor to image 1, 2, and 3 -->
+                <a href="#slide1"></a>
+                <a href="#slide2"></a>
+                <a href="#slide3"></a>
+            </div> <!-- End slider-nav -->
+        </div> <!-- End slider-wrap -->
+    </div> <!-- End carrousel -->
 
-        <!-- Carrousel on main -->
-        <div class="carrousel">
-            <div class="slider-wrap">
-                <div class="slider">
-                    <img id="slide1" src="{{ url_for('static', filename='images/spotify_lyrics.jpg') }}" alt="Lyrics Spotify">
+    <div class="container_glass_box glass">
+        <div class="text_glass">
+            <h1 id="title">DO YOU KNOW YOUR <span style="color: #1DB954;">SPOTIFY</span> PLAYLISTS?</h1>
+        </div>
+    </div>
+    <div id="text_main_manual">
+        <h1>FIND THE <span id="blur-text"><del>MISSING</del></span> LYRICS</h1>
+    </div>
 
-                    <img id="slide2" src="{{ url_for('static', filename='images/spotify_list.jpg') }}" alt="Playlist Spotify">
-
-                    <img id="slide3" src="{{ url_for('static', filename='images/spotify_liked.jpg') }}" alt="Like playlist Spotify">
+    <!-- CSS card animation inspired by webtutorialsw/css_sliding_cards -->
+    <div class="container-grid">
+        <!-- Card container -->
+        <div class="container-card">
+            <!-- Card 1 -->
+            <div class="card" onclick="expandCard(this)">
+                <div class="row">
+                    <div class="icon">1</div>
+                    <div class="description">
+                        <h4>Connect</h4>
+                        <p>Link your Spotify account.</p>
+                    </div>
                 </div>
-                <div class="slider-nav">
-                    <!-- achor to image 1, 2 and 3-->
-                    <a href="#slide1"></a> 
-                    <a href="#slide2"></a>
-                    <a href="#slide3"></a>
-                </div> <!-- end slider-nav-->
-            </div>  <!-- End slider-wrap -->
-        </div> <!-- End carrousel -->
-
-        <div class="container_glass_box glass">
-            <div class="text_glass">
-                <h1 id="title"> DO YOU KNOW YOUR <span style="color: #1DB954;"> SPOTIFY </span> PLAYLISTS ? </h1>
+            </div>
+            <!-- Card 2 -->
+            <div class="card" onclick="expandCard(this)">
+                <div class="row">
+                    <div class="icon">2</div>
+                    <div class="description">
+                        <h4>Select Playlist</h4>
+                        <p>Choose your favorite playlist.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Card 3 -->
+            <div class="card" onclick="expandCard(this)">
+                <div class="row">
+                    <div class="icon">3</div>
+                    <div class="description">
+                        <h4>Sing Cut-out Lyrics</h4>
+                        <p>Challenge yourself and sing along!</p>
+                    </div>
+                </div>
             </div>
         </div>
-        <div id="text_main_manual">
-            <h1 style="font-size: 50pt;"> FIND THE <span id="blur-text"><del>MISSING</del></span> LYRICS </h1> 
 
-            <hr style="width: 75%; border: 0; border-top: 2px solid rgba(115, 115, 115, 0.259); margin-top: 7rem;">
+        <!-- Section for additional elements -->
+        <div class="other-elements">
+            <div class="other-element">Connect</div>
+            <div class="other-element">Select Playlist</div>
+            <div class="other-element">Sing cut-out lyrics</div>
         </div>
+    </div> <!-- End of container grid -->
 
-        <!-- css card animation inpire of webtutorialsw/css_sliding_cards-->
-        <div class="container-grid">
-
-            <!-- Card Container -->
-            <div class="container-card">
-              
-              <!-- Card 1 -->
-              <input type="radio" name="slide" id="c1">
-              <label for="c1" class="card">
-                <div class="row">
-                  <div class="icon">1</div>
-                  <div class="description">
-                    <h4>Register</h4>
-                    <p>Link your Spotify account to play with your songs</p>
-                  </div>
-                </div>
-              </label>
-        
-              <!-- Card 2 -->
-              <input type="radio" name="slide" id="c2">
-              <label for="c2" class="card">
-                <div class="row">
-                  <div class="icon">2</div>
-                  <div class="description">
-                    <h4>Discovery</h4>
-                    <p>Choose your playlist or discover the recommended ones</p>
-                  </div>
-                </div>
-              </label>
-        
-              <!-- Card 3 -->
-              <input type="radio" name="slide" id="c3" checked>
-              <label for="c3" class="card">
-                <div class="row">
-                  <div class="icon">3</div>
-                  <div class="description">
-                    <h4>Show Time</h4>
-                    <p>Try to sing / type the cut-out lyrics</p>
-                  </div>
-                </div>
-              </label>
-        
-            </div> <!-- End of container-card -->
-            
-            <!-- Ordered List -->
-            <ol class="ul-grid-layout">
-              <li class="item-list-grid-layout">Testing</li>
-              <li class="item-list-grid-layout">Lorem</li>
-              <li class="item-list-grid-layout">Severus</li>
-            </ol>
-        
-          </div> <!-- End of container-grid -->
-
-
-          <h1 style="font: size 15rem; text-align: center; margin: 15rem;">Loream ipsum</h1>
-    
+    <h1 id="last_element_login">Register</h1>
 {% endblock %}
