--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,6 +14,16 @@
         }
 
 
+        hr {
+            margin-top: 5%;
+            margin-inline: auto; 
+            width: 50%;
+            background-color: #1DB954; 
+            border: none; 
+            height: 0.1rem; 
+            opacity: 0.2;
+        }
+
         /* prevent unexpected behaviour with the carrousel main page*/ 
         html {
             scroll-behavior: smooth;
@@ -124,8 +134,6 @@
             height: 50vh; 
             overflow: hidden;
             z-index: 1;
-            /* border-bottom: 0.1rem solid rgba(142, 142, 142, 0.33); */
-            border-bottom: 1px solid rgba(0, 0, 0, 0.4);
             box-shadow: 0 3px 15px rgba(0, 0, 0, 0.3), 
                         inset 0 1px 3px rgba(255, 255, 255, 1);
         }
@@ -151,6 +159,9 @@
 
         .slider img {
             scroll-snap-align: start;
+            height: 100%;
+            width: auto;
+            object-fit: cover;
         }
 
         .slider img:hover {
@@ -206,7 +217,7 @@
         .glass {
             height: auto;
             width: auto;
-            max-height: 45rem;
+            max-height: 40rem;
             background: linear-gradient(135deg, rgba(2, 2, 2, 0.2), rgba(30, 31, 31, 0.1));
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
@@ -236,7 +247,7 @@
 
 
         #text_main_manual {
-            margin-top: 13rem;
+            margin-top: 15rem;
             text-align: center;
         }
         
@@ -396,11 +407,19 @@
 
         /* Responsive Media Query */
         @media (max-width: 750px) {
+            
+            .text_glass {
+                line-height: 3rem;
+                margin: 3rem;
+            }
 
-
+            #text_main_manual {
+                margin-top: 20rem;
+                text-align: center;
+            }
 
             .carrousel {
-                height: 40vh; 
+                height: auto;
             }
 
             .other-elements {
