minor improvenent on main page

--- a/templates/index.html
+++ b/templates/index.html
@@ -74,10 +74,13 @@
         <!-- Section for additional elements -->
         <div class="other-elements">
             <div class="other-element">Connect</div>
-            <div class="other-element">Select Playlist</div>
-            <div class="other-element">Sing cut-out lyrics</div>
+            <div class="other-element">Select</div>
+            <div class="other-element">Sing</div>
         </div>
     </div> <!-- End of container grid -->
 
-    <h1 id="last_element_login">Register</h1>
+    <div class="register_link_bot">
+        <a href="#" class="last_element_login">Login</a>
+    </div>
+
 {% endblock %}
