--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,7 +15,7 @@
 
 
         hr {
-            margin-top: 5%;
+            margin: 5%;
             margin-inline: auto; 
             width: 50%;
             background-color: #1DB954; 
@@ -127,6 +127,11 @@
 
 
 
+
+
+
+
+
         /* Carousel style base on SKillthrive video "https://www.youtube.com/@Skillthrive" */
         .carrousel {
             position: relative;
@@ -162,13 +167,14 @@
             height: 100%;
             width: auto;
             object-fit: cover;
+            opacity: 0.8;
+            transition: all 1s ease;
         }
 
         .slider img:hover {
             opacity: 1; /* Reset opacity when hovered */
         }
         
-
         .slider-nav {
             display: flex;
             column-gap: 1rem;
@@ -276,7 +282,7 @@
             grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
             justify-items: center;
             align-items: center;
-            row-gap: clamp(5rem, 10%, 10rem);
+            row-gap: clamp(2rem, 5%, 3rem);
         }
 
         /* Other Elements Section */
@@ -286,13 +292,13 @@
             display: flex;
             flex-direction: column;
             align-self: center;
-            justify-self: center;
-            justify-content: center;
-            row-gap: 5rem;
+            justify-self: flex-start;
+            justify-content: flex-start;
+            row-gap: 4rem;
             flex-wrap: wrap;
-            margin: auto;
             text-align: left;
-            padding-top: clamp(2rem, 5%, 4rem);
+            margin-left: clamp(10rem, 20%, 15rem); 
+            padding-top: clamp(1.5rem, 5%, 4rem);
         }
 
         /* Card Container */
@@ -310,6 +316,7 @@
         }
 
         .card {
+            opacity: 0.7;
             position: relative;
             flex: 1 1 clamp(4rem, 25%, 5rem); /* Responsive shrinking */
             max-width: 4rem; /* Initial size */
@@ -328,7 +335,8 @@
 
         /* Expanded Card Styles */
         .card.expanded {
-            max-width: 45rem; /* Expanded width */
+            max-width: 40rem; /* Expanded width */
+            opacity: 0.9;
             transition: all 0.6s ease-in-out;
         }
 
@@ -363,6 +371,8 @@
         .card > .row > .icon {
             position: absolute;
             background: #1ED760;
+            opacity: .9;
+            color: var(--bg-secondary);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -371,9 +381,13 @@
             border-radius: 50%;
             aspect-ratio: 1;
             top: 1rem;
-            left: 3%;
-            transform: translateX(-2%); 
+            left: 4%;
+            transform: translateX(-4%); 
             transition: all 0.3s ease;
+        }
+
+        .card > .row > .icon:hover {
+            opacity: 1;
         }
 
         .card > .row > .description {
@@ -399,11 +413,11 @@
             text-transform: uppercase;
             background-color: transparent !important;
             font-size: clamp(2rem, 4%, 3rem);
-            margin-top: 4%;
+            margin-top: 3%;
         }
 
         /* Responsive Media Query */
-        @media (max-width: 750px) {
+        @media (max-width: 980px) {
 
 
             hr {
@@ -412,16 +426,13 @@
             
             .text_glass {
                 line-height: 3rem;
-                margin: 3rem;
+                margin: 1.7rem;
+                font-size: 0.8rem !important;
             }
 
             #text_main_manual {
-                margin-top: 20rem;
+                margin-top: 9rem;
                 text-align: center;
-            }
-
-            .carrousel {
-                height: auto;
             }
 
             .other-elements {
@@ -434,10 +445,6 @@
             .container-card {
                 flex-wrap: wrap;
                 gap: 0;
-            }
-
-            .other-elements {
-                text-align: center;
             }
 
             .card {
@@ -472,8 +479,32 @@
             }
         }
 
+        @media (max-width: 768px) {
+            .other-elements {
+                display: flex;
+                justify-self: center !important;
+                justify-content: center !important;
+                text-align: center !important;
+                margin-inline: auto;
+            }
+        }
+
         /* Responsive Media Query */
-        @media (max-width: 400px) {
+        @media (max-width: 600px) {
+
+            .container_glass_box {
+                top: 50%;
+                transform: translate(-50%, -65%);
+            }
+
+            #text_main_manual {
+                margin-top: 7rem;
+            }
+
+            .text_glass {
+                font-size: 0.5rem !important;
+            }
+
 
             .carrousel {
                 height: 35vh; 
@@ -496,11 +527,25 @@
                 max-width: 45%; /* Adjust expanded size for smaller screens */
             }
         }
+        
 
+        .register_link_bot {
+            display: flex;
+            justify-content: center;
+            margin-top: 13rem;
+        } 
 
-        #last_element_login {
-            font-size: clamp(1rem, 10%, 4rem);
-            margin-top: 7rem;
-            text-align: center;
-            text-decoration: underline;
+        .last_element_login {
+            color: #1DB954 !important;
+            opacity: 0.3 !important;
+            text-decoration: underline !important; /* Remove underline if needed */
+        }
+
+        last_element_login:visited {
+            color: #1DB954 !important;
+        }
+
+        a.last_element_login:hover {
+            color: #1DB954 !important;
+            opacity: 1 !important;
         }
